--- a/error.html
+++ b/error.html
@@ -45,7 +45,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=q4yKJC9xczsAX-UEd65&oh=fc25a654594c0cf8b01fb98c36da89c3&oe=5EAC74AA" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=q4yKJC9xczsAX-UEd65&oh=084b9e58b2fbe960eb51a75fa0d8b318&oe=5EB0692A" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -83,37 +83,19 @@
 				<div class="container">
 					<h2 class="article-more__title">ПОПУЛЯРНЫЕ</h2>
 					<div class="article-more__list">
-							<a href="./posts/./banany-s-chesnokom-protiv.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1391</span>
-								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=U0nGcK3Wc40AX8Wxpcz&oh=8977727cd10b452f6f8722b68347377a&oe=5EACAA0C" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
-							</div>
-							<div class="article-more__item-name">БАНАНЫ С ЧЕСНОКОМ ПРОТИВ</div>
-						</a>
-							<a href="./posts/./deystviya-po-zashchite-ot-virusov.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1220</span>
-								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=virMpBDkDh8AX9b4sn4&oh=fc68b85e4c6802fc3c31fcd4e8e022c6&oe=5EAE2CCE" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
-							</div>
-							<div class="article-more__item-name">ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ</div>
-						</a>
 							<a href="./posts/./koren--kurkumy-xxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1175</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1182</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91261694_235875967817349_5871146317711708409_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=ZA-OasJ5D_0AX_MqclW&oh=90e09f0cd1a2fc3378638562443a7359&oe=5EADE44B" alt="КОРЕНЬ КУРКУМЫ 🧡💛">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91261694_235875967817349_5871146317711708409_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=_OffYmlmu7gAX8Sj4sx&oh=014eb165a76493f81fe9f0f647890694&oe=5EADE44B" alt="КОРЕНЬ КУРКУМЫ 🧡💛">
 							</div>
 							<div class="article-more__item-name">КОРЕНЬ КУРКУМЫ 🧡💛</div>
 						</a>
 							<a href="./posts/./ovoshchnye-bul-ony---eto-kontsentrat.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1157</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1159</span>
 								</div>
 								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=ypcw-8sQOukAX8DjLTz&oh=31676aa49b7fa0e58e191e5757c32551&oe=5EAD449C" alt="Овощные бульоны - это концентрат">
 							</div>
@@ -122,16 +104,16 @@
 							<a href="./posts/./bestsennyy-tsink-xxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1138</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1146</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90996521_1942008172590954_5568033803674055447_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=M2it1AXH14wAX_X5zrO&oh=272f82ce6742e224ef1a787656593a3f&oe=5EAC593A" alt="БЕСЦЕННЫЙ ЦИНК 💔💜">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90996521_1942008172590954_5568033803674055447_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=84g_CzGhzUcAX-3F_e-&oh=d59b2851901c349595d077d1c2301f2e&oe=5EB04DBA" alt="БЕСЦЕННЫЙ ЦИНК 💔💜">
 							</div>
 							<div class="article-more__item-name">БЕСЦЕННЫЙ ЦИНК 💔💜</div>
 						</a>
 							<a href="./posts/./pishcha-dlya-virusov.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>981</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>988</span>
 								</div>
 								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91336771_1085054295184360_1080112823009053376_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=XMcFbDD7IwoAX-wRhcE&oh=d15619ea2ec266958864651110257da0&oe=5EACCAAB" alt="ПИЩА ДЛЯ ВИРУСОВ">
 							</div>
@@ -140,7 +122,7 @@
 							<a href="./posts/./neskol-ko-faktov-o-vitamine.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>883</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>885</span>
 								</div>
 								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90746209_1378625632323212_2756391034046175744_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=ox0jJMli99wAX9gMnOs&oh=c021b3239bb94f1adedd425f274f686d&oe=5EAD372D" alt="НЕСКОЛЬКО ФАКТОВ О ВИТАМИНЕ">
 							</div>
@@ -149,11 +131,29 @@
 							<a href="./posts/./kardamon-xx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>869</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>870</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90756383_197664771661686_8287870001632030883_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=3T3b1clIqywAX-1Wa1y&oh=bd41608afff3e1d310e0def933db14a0&oe=5EAB8F80" alt="КАРДАМОН ☀️">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90756383_197664771661686_8287870001632030883_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=leX6pQ5PJKYAX8xRUwY&oh=b074cb79f091305085e4133d62f52a79&oe=5EAF8400" alt="КАРДАМОН ☀️">
 							</div>
 							<div class="article-more__item-name">КАРДАМОН ☀️</div>
+						</a>
+							<a href="./posts/./xxchay-iz-romashkix-kornya.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>803</span>
+								</div>
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90179828_211567840064126_2564666930984579287_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=IORVMaUXoO8AX-te_Wf&oh=bfa6ae5c58d05dcf8c27a6f7adee134f&oe=5EAF7BC5" alt="🌼ЧАЙ ИЗ РОМАШКИ, КОРНЯ">
+							</div>
+							<div class="article-more__item-name">🌼ЧАЙ ИЗ РОМАШКИ, КОРНЯ</div>
+						</a>
+							<a href="./posts/./retsept-bananovykh-blinchikov.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>712</span>
+								</div>
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90341539_918138405312887_3795518726980906851_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=CDJqci3ROm8AX-QkFLF&oh=9d530ae7e45418f43cc411fc52826e73&oe=5EAEABBB" alt="РЕЦЕПТ БАНАНОВЫХ БЛИНЧИКОВ">
+							</div>
+							<div class="article-more__item-name">РЕЦЕПТ БАНАНОВЫХ БЛИНЧИКОВ</div>
 						</a>
 						</div>
 				</div>
