--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=q4yKJC9xczsAX-UEd65&oh=fc25a654594c0cf8b01fb98c36da89c3&oe=5EAC74AA" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=q4yKJC9xczsAX-UEd65&oh=084b9e58b2fbe960eb51a75fa0d8b318&oe=5EB0692A" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -106,6 +106,26 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="dlya-tekhx-kto-znakom-s-original-noy-metodikoy" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91896194_726875838057340_762706699482118485_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=Apw74Rt9O3IAX_1XC8E&oh=48385401b7ddf23a434aefeae12d2af7&oe=5EAD22CA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Для тех, кто знаком с оригинальной методикой">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="istselyayushchee-zazemlenie-okeana" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91260508_1053576998359040_5197521723219057125_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=xoKwA7-ZEDMAX-szjEu&oh=8face26e650d7f1011b963e9f6448335&oe=5EAE2404" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ИСЦЕЛЯЮЩЕЕ ЗАЗЕМЛЕНИЕ ОКЕАНА">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="pishcha-dlya-virusov" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91336771_1085054295184360_1080112823009053376_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=XMcFbDD7IwoAX-wRhcE&oh=d15619ea2ec266958864651110257da0&oe=5EACCAAB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПИЩА ДЛЯ ВИРУСОВ">
@@ -118,7 +138,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="koren--kurkumy-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91261694_235875967817349_5871146317711708409_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=ZA-OasJ5D_0AX_MqclW&oh=90e09f0cd1a2fc3378638562443a7359&oe=5EADE44B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КОРЕНЬ КУРКУМЫ 🧡💛">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91261694_235875967817349_5871146317711708409_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=_OffYmlmu7gAX8Sj4sx&oh=014eb165a76493f81fe9f0f647890694&oe=5EADE44B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КОРЕНЬ КУРКУМЫ 🧡💛">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="bestsennyy-tsink-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90996521_1942008172590954_5568033803674055447_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=M2it1AXH14wAX_X5zrO&oh=272f82ce6742e224ef1a787656593a3f&oe=5EAC593A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БЕСЦЕННЫЙ ЦИНК 💔💜">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90996521_1942008172590954_5568033803674055447_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=84g_CzGhzUcAX-3F_e-&oh=d59b2851901c349595d077d1c2301f2e&oe=5EB04DBA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БЕСЦЕННЫЙ ЦИНК 💔💜">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +168,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zvezdochki-anisa-xbad-yan" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91000806_893142647790829_2812803803743325593_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=KQk8cINgiAoAX9t_BSU&oh=a8ad8babff7e72a419c0ca4bd49399f1&oe=5EAC365E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗВЕЗДОЧКИ АНИСА (БАДЬЯН)">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91000806_893142647790829_2812803803743325593_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=KQk8cINgiAoAX9t_BSU&oh=68ce048956dc9a43f1c604eecc19702b&oe=5EB02ADE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗВЕЗДОЧКИ АНИСА (БАДЬЯН)">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -158,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="retsept-bananovykh-blinchikov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90341539_918138405312887_3795518726980906851_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=i_DMHaAuwQAAX-sGYIQ&oh=665cd40f169b56c3475edf00a1151fc3&oe=5EAEABBB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БАНАНОВЫХ БЛИНЧИКОВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90341539_918138405312887_3795518726980906851_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=CDJqci3ROm8AX-QkFLF&oh=9d530ae7e45418f43cc411fc52826e73&oe=5EAEABBB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БАНАНОВЫХ БЛИНЧИКОВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="kardamon-xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90756383_197664771661686_8287870001632030883_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=3T3b1clIqywAX-1Wa1y&oh=bd41608afff3e1d310e0def933db14a0&oe=5EAB8F80" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАРДАМОН ☀️">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90756383_197664771661686_8287870001632030883_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=leX6pQ5PJKYAX8xRUwY&oh=b074cb79f091305085e4133d62f52a79&oe=5EAF8400" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАРДАМОН ☀️">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -178,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxchay-iz-romashkix-kornya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90179828_211567840064126_2564666930984579287_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=CO6gdufC9-EAX-6SEmZ&oh=b9afe31a2eb4f23a3517d97971fbed0e&oe=5EAB8745" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🌼ЧАЙ ИЗ РОМАШКИ, КОРНЯ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90179828_211567840064126_2564666930984579287_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=IORVMaUXoO8AX-te_Wf&oh=bfa6ae5c58d05dcf8c27a6f7adee134f&oe=5EAF7BC5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🌼ЧАЙ ИЗ РОМАШКИ, КОРНЯ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -208,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="banany-s-chesnokom-protiv" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=U0nGcK3Wc40AX8Wxpcz&oh=8977727cd10b452f6f8722b68347377a&oe=5EACAA0C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=U0nGcK3Wc40AX8Wxpcz&oh=93d2150aac05497f6dac1ae0c3b32e2a&oe=5EB09E8C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="gidrastis-xgoldensealx-xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=OGPC43UzdmMAX_HORWu&oh=0f121e43a79346aff23bde26a0d802ca&oe=5EAE621A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГИДРАСТИС (Goldenseal) 🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=wCgPjPAUV0kAX-aK4pV&oh=18c67ade061111fe00e3a3cd406c69c5&oe=5EAE621A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГИДРАСТИС (Goldenseal) 🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -238,7 +258,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="list-korovyaka-xmullein-leaf" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=ZUXtVaYe9eMAX8ojyfS&oh=b746f5c3966b2d07b8dfacc0dc527764&oe=5EAC2ACF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=ZUXtVaYe9eMAX8ojyfS&oh=dbd4f230748107c75ee28e2d4d3d67fb&oe=5EB01F4F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="sirop-iz-yagod-buziny" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=j2sq3B9VAZ4AX_ZF2wD&oh=38c2c6844327e367800f8277a7677e63&oe=5EAB6FE6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=pRHVcSkoxdYAX-1zh8P&oh=07b75fd1616450738ebbcaf2f4593335&oe=5EAF6466" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,27 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ob-osnovnykh-dobavkakhx-aktual-nykh" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=UuwG1D3693QAX9vt9If&oh=e5631e8828a8dba807bafaca1887f690&oe=5EAC6AFD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="shpinatxxx" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89385356_221989658951830_6343720088222175732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=MTtHTDyshugAX-cILF8&oh=14a469ba5e39cc48a4fb3ff7556f674f&oe=5EAC6C8A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ШПИНАТ 🌱">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="luchshie-produkty-dlya-ukrepleniya" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=qq8DK-vAFlUAX81eArU&oh=aff857eeacb3f0b160f7f2d58eec072c&oe=5EAD30AC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=UuwG1D3693QAX9vt9If&oh=3f9db2fca67d6f5a266343cd29964613&oe=5EB05F7D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
