--- a/error.html
+++ b/error.html
@@ -45,7 +45,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=q4yKJC9xczsAX-UEd65&oh=084b9e58b2fbe960eb51a75fa0d8b318&oe=5EB0692A" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=xG8fqNXqzkoAX_isVGR&oh=3dde8446ac9af5122cf43dafee35849c&oe=5EB45DAA" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -86,72 +86,72 @@
 							<a href="./posts/./koren--kurkumy-xxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1182</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1196</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91261694_235875967817349_5871146317711708409_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=_OffYmlmu7gAX8Sj4sx&oh=014eb165a76493f81fe9f0f647890694&oe=5EADE44B" alt="КОРЕНЬ КУРКУМЫ 🧡💛">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91261694_235875967817349_5871146317711708409_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=Ng3ESN0Cwk8AX8hpOeH&oh=1e059cb5dc972ae9515018c320cb8e7b&oe=5EB1D8CB" alt="КОРЕНЬ КУРКУМЫ 🧡💛">
 							</div>
 							<div class="article-more__item-name">КОРЕНЬ КУРКУМЫ 🧡💛</div>
-						</a>
-							<a href="./posts/./ovoshchnye-bul-ony---eto-kontsentrat.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1159</span>
-								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=ypcw-8sQOukAX8DjLTz&oh=31676aa49b7fa0e58e191e5757c32551&oe=5EAD449C" alt="Овощные бульоны - это концентрат">
-							</div>
-							<div class="article-more__item-name">Овощные бульоны - это концентрат</div>
 						</a>
 							<a href="./posts/./bestsennyy-tsink-xxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1146</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1158</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90996521_1942008172590954_5568033803674055447_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=84g_CzGhzUcAX-3F_e-&oh=d59b2851901c349595d077d1c2301f2e&oe=5EB04DBA" alt="БЕСЦЕННЫЙ ЦИНК 💔💜">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90996521_1942008172590954_5568033803674055447_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=PJUlVmwT9-4AX_ruYXs&oh=58be7db12c370fee08f9de38bb26f630&oe=5EB4423A" alt="БЕСЦЕННЫЙ ЦИНК 💔💜">
 							</div>
 							<div class="article-more__item-name">БЕСЦЕННЫЙ ЦИНК 💔💜</div>
 						</a>
 							<a href="./posts/./pishcha-dlya-virusov.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>988</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1004</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91336771_1085054295184360_1080112823009053376_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=XMcFbDD7IwoAX-wRhcE&oh=d15619ea2ec266958864651110257da0&oe=5EACCAAB" alt="ПИЩА ДЛЯ ВИРУСОВ">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91336771_1085054295184360_1080112823009053376_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=hsrLRaWAOeMAX-YEFv6&oh=7fffea996a08a8036b61150c8cf1ea74&oe=5EB4B3AB" alt="ПИЩА ДЛЯ ВИРУСОВ">
 							</div>
 							<div class="article-more__item-name">ПИЩА ДЛЯ ВИРУСОВ</div>
 						</a>
 							<a href="./posts/./neskol-ko-faktov-o-vitamine.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>885</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>896</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90746209_1378625632323212_2756391034046175744_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=ox0jJMli99wAX9gMnOs&oh=c021b3239bb94f1adedd425f274f686d&oe=5EAD372D" alt="НЕСКОЛЬКО ФАКТОВ О ВИТАМИНЕ">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90746209_1378625632323212_2756391034046175744_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=pBPkg3oCUIIAX_4DiUF&oh=c584ca7f45c2df858200db11afff517b&oe=5EB12BAD" alt="НЕСКОЛЬКО ФАКТОВ О ВИТАМИНЕ">
 							</div>
 							<div class="article-more__item-name">НЕСКОЛЬКО ФАКТОВ О ВИТАМИНЕ</div>
 						</a>
 							<a href="./posts/./kardamon-xx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>870</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>877</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90756383_197664771661686_8287870001632030883_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=leX6pQ5PJKYAX8xRUwY&oh=b074cb79f091305085e4133d62f52a79&oe=5EAF8400" alt="КАРДАМОН ☀️">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90756383_197664771661686_8287870001632030883_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=NmD7tilwOBwAX9JXB2p&oh=2f6f87d901a48f98653a6b584c6f23f5&oe=5EB37880" alt="КАРДАМОН ☀️">
 							</div>
 							<div class="article-more__item-name">КАРДАМОН ☀️</div>
 						</a>
 							<a href="./posts/./xxchay-iz-romashkix-kornya.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>803</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>810</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90179828_211567840064126_2564666930984579287_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=IORVMaUXoO8AX-te_Wf&oh=bfa6ae5c58d05dcf8c27a6f7adee134f&oe=5EAF7BC5" alt="🌼ЧАЙ ИЗ РОМАШКИ, КОРНЯ">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90179828_211567840064126_2564666930984579287_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=r0WMB-QN-cMAX-J2F2g&oh=ad4cec3471ed1c1ccb313bb62048a986&oe=5EB37045" alt="🌼ЧАЙ ИЗ РОМАШКИ, КОРНЯ">
 							</div>
 							<div class="article-more__item-name">🌼ЧАЙ ИЗ РОМАШКИ, КОРНЯ</div>
+						</a>
+							<a href="./posts/./v-poslednee-vremya-stalo.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>798</span>
+								</div>
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91596736_142381333985760_6261366196227650123_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=m5EyELkom8wAX8si3kB&oh=f5f25afd482b69210ed1cff63c2ae4af&oe=5EB1BEE4" alt="В последнее время стало">
+							</div>
+							<div class="article-more__item-name">В последнее время стало</div>
 						</a>
 							<a href="./posts/./retsept-bananovykh-blinchikov.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>712</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>720</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90341539_918138405312887_3795518726980906851_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=CDJqci3ROm8AX-QkFLF&oh=9d530ae7e45418f43cc411fc52826e73&oe=5EAEABBB" alt="РЕЦЕПТ БАНАНОВЫХ БЛИНЧИКОВ">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90341539_918138405312887_3795518726980906851_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=gI7fiaQeYjQAX_gwX8U&oh=d5b371dd7395fb58335b3b342f2e45c5&oe=5EB2A03B" alt="РЕЦЕПТ БАНАНОВЫХ БЛИНЧИКОВ">
 							</div>
 							<div class="article-more__item-name">РЕЦЕПТ БАНАНОВЫХ БЛИНЧИКОВ</div>
 						</a>
