--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=xG8fqNXqzkoAX_isVGR&oh=3dde8446ac9af5122cf43dafee35849c&oe=5EB45DAA" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=K7XqPUhK9BwAX8urvF1&oh=3532629ddcaaa7c43089231a5f356d9a&oe=5EB45DAA" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -106,9 +106,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="vse-dikie-rasteniya-v-izobilii" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/92660295_233142348091692_7095013769332223871_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=jSonW5R8KvAAX8Bipmk&oh=8232c02b3fc428e5445cd6df31205c98&oe=5EB35559" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Все дикие растения в изобилии">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="v-poslednee-vremya-stalo" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91596736_142381333985760_6261366196227650123_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=m5EyELkom8wAX8si3kB&oh=f5f25afd482b69210ed1cff63c2ae4af&oe=5EB1BEE4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="В последнее время стало">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91596736_142381333985760_6261366196227650123_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=W5pZyCJnW5YAX9S_LL4&oh=377be7d6bb4117f66b858f772efec866&oe=5EB5B364" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="В последнее время стало">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="v-zavershenii-serii-postov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/92028683_657372118431316_6533176371729812244_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=dKqLgaRDg6kAX_1lplB&oh=eef1fa3a2a676a42aa7daa8c8e1ad6f3&oe=5EB1F215" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="В завершении серии постов">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/92028683_657372118431316_6533176371729812244_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=kltRMy73kdAAX-klfWl&oh=11c9c4298ab1d86667eb82cc03cdf289&oe=5EB5E695" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="В завершении серии постов">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -128,7 +138,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="dlya-tekhx-kto-znakom-s-original-noy-metodikoy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91896194_726875838057340_762706699482118485_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=qqy5i_9-JCkAX-d3bF0&oh=cccbf61a7bf3c2ba078da81dece5dd9a&oe=5EB1174A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Для тех, кто знаком с оригинальной методикой">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91896194_726875838057340_762706699482118485_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=qqy5i_9-JCkAX-d3bF0&oh=cdb754a2926fadec7ddb7a35aeadbeff&oe=5EB50BCA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Для тех, кто знаком с оригинальной методикой">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="istselyayushchee-zazemlenie-okeana" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91260508_1053576998359040_5197521723219057125_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=sRn6gWyY_yMAX-xP5_i&oh=fbdad137c314b1476590f64052abe7d5&oe=5EB21884" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ИСЦЕЛЯЮЩЕЕ ЗАЗЕМЛЕНИЕ ОКЕАНА">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91260508_1053576998359040_5197521723219057125_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=sRn6gWyY_yMAX-xP5_i&oh=f5e751f204a9a4863066f4add322554d&oe=5EB60D04" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ИСЦЕЛЯЮЩЕЕ ЗАЗЕМЛЕНИЕ ОКЕАНА">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="pishcha-dlya-virusov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91336771_1085054295184360_1080112823009053376_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=hsrLRaWAOeMAX-YEFv6&oh=7fffea996a08a8036b61150c8cf1ea74&oe=5EB4B3AB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПИЩА ДЛЯ ВИРУСОВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91336771_1085054295184360_1080112823009053376_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=rSSOLLZQZq8AX9UuJLS&oh=a9ca55b23aedaa88a3ccc8a5c6458ed7&oe=5EB4B3AB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПИЩА ДЛЯ ВИРУСОВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -158,7 +168,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="koren--kurkumy-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91261694_235875967817349_5871146317711708409_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=Ng3ESN0Cwk8AX8hpOeH&oh=1e059cb5dc972ae9515018c320cb8e7b&oe=5EB1D8CB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КОРЕНЬ КУРКУМЫ 🧡💛">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91261694_235875967817349_5871146317711708409_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=Ng3ESN0Cwk8AX8hpOeH&oh=b5aeef7c8a1df10653765379d1445a50&oe=5EB5CD4B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КОРЕНЬ КУРКУМЫ 🧡💛">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="neskol-ko-faktov-o-vitamine" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90746209_1378625632323212_2756391034046175744_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=pBPkg3oCUIIAX_4DiUF&oh=c584ca7f45c2df858200db11afff517b&oe=5EB12BAD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="НЕСКОЛЬКО ФАКТОВ О ВИТАМИНЕ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90746209_1378625632323212_2756391034046175744_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=pBPkg3oCUIIAX_4DiUF&oh=d9ade23199b8293bf2ade1a715d8ef79&oe=5EB5202D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="НЕСКОЛЬКО ФАКТОВ О ВИТАМИНЕ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -188,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zvezdochki-anisa-xbad-yan" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91000806_893142647790829_2812803803743325593_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=Nz6TLKGQYdAAX_Cgzc_&oh=874cef53bff75ffcc50bd926d5796b89&oe=5EB41F5E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗВЕЗДОЧКИ АНИСА (БАДЬЯН)">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91000806_893142647790829_2812803803743325593_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=cMbK0CLdAbsAX_oKFst&oh=464a30e188c49cb1c02219dfcadc71e7&oe=5EB41F5E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗВЕЗДОЧКИ АНИСА (БАДЬЯН)">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +208,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="retsept-bananovykh-blinchikov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90341539_918138405312887_3795518726980906851_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=gI7fiaQeYjQAX_gwX8U&oh=d5b371dd7395fb58335b3b342f2e45c5&oe=5EB2A03B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БАНАНОВЫХ БЛИНЧИКОВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90341539_918138405312887_3795518726980906851_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=gI7fiaQeYjQAX_gwX8U&oh=2ba1c47b490c7df18625d7f94cc0ac23&oe=5EB694BB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БАНАНОВЫХ БЛИНЧИКОВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ovoshchnye-bul-ony---eto-kontsentrat" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=6cnTearvkzoAX8GXUJk&oh=3b90cc3335e8150a34305e95ff4b65bc&oe=5EB1391C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Овощные бульоны - это концентрат">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=FKqvz63uLvAAX-lJVCm&oh=c44234b52c50faf0451828a13b2305f5&oe=5EB52D9C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Овощные бульоны - это концентрат">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -238,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="sanitayzer-sdelay-sam-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90416250_664743621015346_8148014957315489439_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=l_lvlLZ4DlMAX9UrOew&oh=66fbb757fdb73c4e4e003c8b5f2e5290&oe=5EB2DF4B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="САНИТАЙЗЕР СДЕЛАЙ САМ 🌱🤲">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90416250_664743621015346_8148014957315489439_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=_t_sUgfttLIAX-4K5wL&oh=9054ffb459120c99121d642abc08d5cb&oe=5EB6D3CB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="САНИТАЙЗЕР СДЕЛАЙ САМ 🌱🤲">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +258,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="banany-s-chesnokom-protiv" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=uS4kDrEpvjgAX-HmCIl&oh=f560967a3f6da9a777e9fc53b5036a00&oe=5EB4930C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=294yZZv3UmsAX_qH9Ky&oh=8950a9f8c984f5880fec3e441761e8c6&oe=5EB4930C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="deystviya-po-zashchite-ot-virusov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=YIhz9aqmhb0AX__-ede&oh=6c7cf6420d27f5ee6a1f484326723208&oe=5EB2214E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=A6ZXhhiePa4AX8-UfNn&oh=deb14807915bfa73f65b33916e0f11ab&oe=5EB615CE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,17 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="gidrastis-xgoldensealx-xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=H_1BhpIKDHIAX_ShKlu&oh=ff98b8b709aa8718da3d07c422fd2e74&oe=5EB2569A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГИДРАСТИС (Goldenseal) 🌱">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="list-korovyaka-xmullein-leaf" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=AL6lGAqqRCQAX811RnZ&oh=277b46d2a2a9c38cdc2287ab9a04c075&oe=5EB413CF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=H_1BhpIKDHIAX_ShKlu&oh=d6f70bd0e7942bd6ea86108482c57c3c&oe=5EB64B1A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГИДРАСТИС (Goldenseal) 🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
