--- a/error.html
+++ b/error.html
@@ -45,7 +45,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=xVVWJ1vYVGUAX89VJDP&oh=552e06a60d6bd8b70e0435a015d65c21&oe=5EBC46AA" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=RPGhn3EE-3wAX8ro8AH&oh=e32a4eed1a5478167c8c76f4fb7ecf06&oe=5EDBEAAA" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -83,77 +83,77 @@
 				<div class="container">
 					<h2 class="article-more__title">ПОПУЛЯРНЫЕ</h2>
 					<div class="article-more__list">
-							<a href="./posts/./koren--kurkumy-xxxx.html" class="article-more__item">
+							<a href="./posts/./etot-variant-kartofel-nogo-omleta.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1224</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1929</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91261694_235875967817349_5871146317711708409_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=GphtXxZ_QW0AX9VkFJR&oh=c2d1d43b598a1df63874e6bb4a5428ea&oe=5EBDB64B" alt="КОРЕНЬ КУРКУМЫ 🧡💛">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94620966_275530396780199_7448910712073894917_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=g8YZBM43gI0AX9LboPB&oh=6c2e280b751dc65cc67f41bdde917423&oe=5ED987EB" alt="Этот вариант картофельного омлета">
 							</div>
-							<div class="article-more__item-name">КОРЕНЬ КУРКУМЫ 🧡💛</div>
+							<div class="article-more__item-name">Этот вариант картофельного омлета</div>
 						</a>
-							<a href="./posts/./bestsennyy-tsink-xxxx.html" class="article-more__item">
+							<a href="./posts/./mm-protokol-pri-prostude-i-grippe.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1191</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1244</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90996521_1942008172590954_5568033803674055447_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=c7bOcQV9f-YAX9loEmC&oh=6003514d0412cb249418555800bb2a4a&oe=5EBC2B3A" alt="БЕСЦЕННЫЙ ЦИНК 💔💜">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94908449_233556167753615_2423687939069125428_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=km8rx_ATJsUAX-rXfdi&oh=5de58dded983da93a2b3858de556e832&oe=5EDAD3BA" alt="ММ ПРОТОКОЛ ПРИ ПРОСТУДЕ И ГРИППЕ">
 							</div>
-							<div class="article-more__item-name">БЕСЦЕННЫЙ ЦИНК 💔💜</div>
+							<div class="article-more__item-name">ММ ПРОТОКОЛ ПРИ ПРОСТУДЕ И ГРИППЕ</div>
 						</a>
-							<a href="./posts/./pishcha-dlya-virusov.html" class="article-more__item">
+							<a href="./posts/./chto-ya-ela-za-den-xxxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1031</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1124</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91336771_1085054295184360_1080112823009053376_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=kGCeE2nffv0AX83d2GJ&oh=e7a7eebe1205e9d431245cb28df8b569&oe=5EBC9CAB" alt="ПИЩА ДЛЯ ВИРУСОВ">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94196291_222078719237008_665964129471407108_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=AGdUdJbH3OQAX-9-bzF&oh=436bef41ba2009e5c222492ab1517bb5&oe=5ED8CF7B" alt="ЧТО Я ЕЛА ЗА ДЕНЬ 🤨😀">
 							</div>
-							<div class="article-more__item-name">ПИЩА ДЛЯ ВИРУСОВ</div>
+							<div class="article-more__item-name">ЧТО Я ЕЛА ЗА ДЕНЬ 🤨😀</div>
 						</a>
-							<a href="./posts/./v-poslednee-vremya-stalo.html" class="article-more__item">
+							<a href="./posts/./tsvetnaya-kapusta.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>983</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1063</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91596736_142381333985760_6261366196227650123_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=M5FIgv3n8u8AX_-7GvF&oh=f5ee8b47307c1c7aaa7d15f69865c82f&oe=5EBD9C64" alt="В последнее время стало">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/93051263_256693782133255_4218797136526045842_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=lE1XfdjEJLcAX9j_OEA&oh=c0439ef13ccb306b44d266b60568d73c&oe=5ED8923A" alt="ЦВЕТНАЯ КАПУСТА.">
 							</div>
-							<div class="article-more__item-name">В последнее время стало</div>
+							<div class="article-more__item-name">ЦВЕТНАЯ КАПУСТА.</div>
 						</a>
-							<a href="./posts/./neskol-ko-faktov-o-vitamine.html" class="article-more__item">
+							<a href="./posts/./pol-za-kremniya-xxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>908</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>949</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90746209_1378625632323212_2756391034046175744_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=FdPj3b1FcKYAX-l7jox&oh=f255be875584bccafb047619dbba2f1e&oe=5EBD092D" alt="НЕСКОЛЬКО ФАКТОВ О ВИТАМИНЕ">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94288863_517569202260758_9151571851577457594_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=o9E8XirGh9EAX-v-WyX&oh=3f45f16d6e4e954bbb936a59d6ca5efb&oe=5ED8BEE3" alt="ПОЛЬЗА КРЕМНИЯ 🦷🌱">
 							</div>
-							<div class="article-more__item-name">НЕСКОЛЬКО ФАКТОВ О ВИТАМИНЕ</div>
+							<div class="article-more__item-name">ПОЛЬЗА КРЕМНИЯ 🦷🌱</div>
 						</a>
-							<a href="./posts/./kardamon-xx.html" class="article-more__item">
+							<a href="./posts/./o-chem-govoryat-pishchevye-zavisimosti.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>889</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>828</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90756383_197664771661686_8287870001632030883_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=QHeAx1Od7EEAX-WyIpq&oh=f98b3f1b1d781d18bbdcfb704ab53bec&oe=5EBB6180" alt="КАРДАМОН ☀️">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95555822_873387673180603_168422133034049339_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=NDKmllF1VT4AX-m2z_S&oh=22d69cd7200f0172a80c0a88b26b2bbd&oe=5EDA84B4" alt="О ЧЕМ ГОВОРЯТ ПИЩЕВЫЕ ЗАВИСИМОСТИ">
 							</div>
-							<div class="article-more__item-name">КАРДАМОН ☀️</div>
+							<div class="article-more__item-name">О ЧЕМ ГОВОРЯТ ПИЩЕВЫЕ ЗАВИСИМОСТИ</div>
 						</a>
-							<a href="./posts/./retsept-bananovykh-blinchikov.html" class="article-more__item">
+							<a href="./posts/./istselyayushchie-svoystva-sparzhixxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>728</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>797</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90341539_918138405312887_3795518726980906851_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=vsqHCMstmcMAX8kJ_h4&oh=f63b83461928f5990725464ab450005e&oe=5EBE7DBB" alt="РЕЦЕПТ БАНАНОВЫХ БЛИНЧИКОВ">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/94951517_597248230878070_2799219618207129721_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=RozutYI2Yx0AX_1bKa3&oh=84680db9c10a79cea38f7b42b65d26c5&oe=5EDBEEAB" alt="ИСЦЕЛЯЮЩИЕ СВОЙСТВА СПАРЖИ 🌱">
 							</div>
-							<div class="article-more__item-name">РЕЦЕПТ БАНАНОВЫХ БЛИНЧИКОВ</div>
+							<div class="article-more__item-name">ИСЦЕЛЯЮЩИЕ СВОЙСТВА СПАРЖИ 🌱</div>
 						</a>
-							<a href="./posts/./zvezdochki-anisa-xbad-yan.html" class="article-more__item">
+							<a href="./posts/./shalfey-dlya-vyvedeniya-tm-iz-kishechnikaxxxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>709</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>788</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91000806_893142647790829_2812803803743325593_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=S41Z3PhTFFgAX98aa_O&oh=ce32df183dea90894beec7a1755689a0&oe=5EBC085E" alt="ЗВЕЗДОЧКИ АНИСА (БАДЬЯН)">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/93945481_538231843553142_713031681186641630_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=g_kM9Qnu5XIAX-Rkotz&oh=1505c89f0d51d6d395938d0f6eb1d956&oe=5ED98B7F" alt="ШАЛФЕЙ ДЛЯ ВЫВЕДЕНИЯ ТМ ИЗ КИШЕЧНИКА 🌟🌱">
 							</div>
-							<div class="article-more__item-name">ЗВЕЗДОЧКИ АНИСА (БАДЬЯН)</div>
+							<div class="article-more__item-name">ШАЛФЕЙ ДЛЯ ВЫВЕДЕНИЯ ТМ ИЗ КИШЕЧНИКА 🌟🌱</div>
 						</a>
 						</div>
 				</div>
